feat: add api register
