# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api/v1
 definitions:
   gorm.DeletedAt:
     properties:
@@ -44,7 +43,6 @@ definitions:
       username:
         type: string
     required:
-    - avatar
     - fullname
     - password
     - username
@@ -52,8 +50,10 @@ definitions:
   request.LoginRequest:
     properties:
       password:
+        example: "1234"
         type: string
       username:
+        example: admin
         type: string
     required:
     - password
@@ -76,29 +76,24 @@ definitions:
   request.UserRequest:
     properties:
       avatar:
+        example: admin
         type: string
       fullname:
+        example: admin test
         type: string
       password:
+        example: "1234"
         type: string
       username:
+        example: admin
         type: string
     required:
-    - avatar
     - fullname
     - password
     - username
     type: object
-host: localhost:3000
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is a sample server celler server.
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
-  version: "1.0"
+  contact: {}
 paths:
   /auth/login:
     post:
@@ -134,6 +129,24 @@ paths:
           schema:
             $ref: '#/definitions/model.User'
       summary: RefreshToken
+      tags:
+      - Auth
+  /auth/register:
+    post:
+      description: Register
+      parameters:
+      - description: query params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.UserRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+      summary: Register
       tags:
       - Auth
   /product/category:
